2012-06-23  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/makecontext.S (.Lexitcode): Always
	initialize the GOT register before use.

	* sysdeps/unix/sysv/linux/sh/makecontext.S (__makecontext): Fix
	calculation of ARGC > 4.

	* sysdeps/unix/sysv/linux/sh/makecontext.S: Add comments and give more
	meaningful names to some local labels.

2012-06-22  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>
	    Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/bits/atomic.h
	(__arch_compare_and_exchange_val_8_acq): Remove explicit nop.
	(__arch_compare_and_exchange_val_16_acq): Likewise.
	(__arch_compare_and_exchange_val_32_acq): Likewise.
	(atomic_exchange_and_add): Fix gUSA sequence.
	(atomic_add): Likewise.
	(atomic_add_negative): Likewise.
	(atomic_add_zero): Likewise.
	(atomic_bit_test_set): Likewise.

2012-06-22  Andreas Schwab  <schwab@redhat.com>

	[BZ #13579]
	* include/link.h (struct link_map): Add l_free_initfini.
	* elf/dl-deps.c (_dl_map_object_deps): Set it when assigning
	l_initfini.
	* elf/dl-close.c (_dl_close_worker): Don't free l_initfini.
	* elf/rtld.c (dl_main): Clear it on all objects loaded on startup.
	* elf/dl-libc.c (free_mem): Free l_initfini if l_free_initfini is
	set.

2012-06-22  Carlos O'Donell  <carlos_odonell@mentor.com>

	* configure.in: Use AC_LANG_SOURCE.
	* configure: Regenerate.

2012-06-22  Roland McGrath  <roland@hack.frob.com>

	* configure.in (libc_cv_localstatedir): New substituted variable.
	* configure: Regenerated.
	* config.make.in (localstatedir): New variable, substituted from
	libc_cv_localstatedir.
	* Makeconfig (vardbdir): Use $(localstatedir) in place of /var.
	* sysdeps/gnu/configure.in (libc_cv_localstatedir): Change
	${prefix}/var to /var when we change ${prefix}/etc to /etc.
	* sysdeps/gnu/configure: Regenerated.

2012-06-21  Jeff Law  <law@redhat.com>

	[BZ #14277]
	* intl/dcigettext.c (_nl_find_msg): Avoid use after potential
	free.  Simplify list management for _LIBC case.
