@@ -1,5 +1,9 @@
 2012-06-23  Thomas Schwinge  <thomas@codesourcery.com>
 
+	* sysdeps/sh/abort-instr.h: New file.
+	* sysdeps/unix/sysv/linux/sh/makecontext.S (.Lexitcode): Terminate the
+	process in case exit returns.
+
 	* sysdeps/unix/sysv/linux/sh/makecontext.S (.Lexitcode): Always
 	initialize the GOT register before use.
 
